force-app/main/default/objects/Worker__c/Worker__c.object-meta.xml
<CustomObject>
    <description>Maintains a cache of worker data pulled from external systems for matching purposes during time entry processing</description>
    <label>Worker</label>
    <nameField>
        <displayFormat>WK-{0000}</displayFormat>
        <label>Worker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>