force-app/main/default/objects/Worker__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the worker is currently active</description>
    <inlineHelpText>Indicates if the worker is currently active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>