force-app/main/default/objects/Worker__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>The worker’s display name</description>
    <inlineHelpText>The worker’s display name</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>