force-app/main/default/objects/Worker__c/fields/Worker_Email__c.field-meta.xml
<CustomField>
    <fullName>Worker_Email__c</fullName>
    <description>The worker’s work email address</description>
    <inlineHelpText>The worker’s work email address</inlineHelpText>
    <label>Worker Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>