force-app/main/default/objects/Worker__c/fields/Worker_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Worker_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique identifier for the worker from the external system</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for the worker from the external system</inlineHelpText>
    <label>Worker External ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>